[project]
name = "eiuie"
version = "0.0.1"
description = "Enhancing Images with uneven Illumination using Ensemble Learning"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["eiuie"]

[tool.hatch.build.targets.wheel.sources]
"eiuie" = "eiuie"
